--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -7,6 +7,37 @@
     android:orientation="vertical"
     android:visibility="visible">
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/IdBlack"
+        android:layout_alignLeft="@+id/IdBlack"
+        android:layout_alignStart="@+id/IdBlack"
+        android:text="Id For Black Player"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <EditText
+        android:id="@+id/IdRed"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/textView7"
+        android:layout_alignLeft="@+id/textView7"
+        android:layout_alignRight="@+id/textView7"
+        android:layout_alignStart="@+id/textView7"
+        android:layout_centerVertical="true" />
+
+    <EditText
+        android:id="@+id/IdBlack"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/BlackFace"
+        android:layout_alignEnd="@+id/Saveplayers"
+        android:layout_alignLeft="@+id/Saveplayers"
+        android:layout_alignRight="@+id/Saveplayers"
+        android:layout_alignStart="@+id/Saveplayers"
+        android:layout_marginBottom="17dp" />
+
     <Button
         android:id="@+id/Saveplayers"
         android:layout_width="131dp"
@@ -18,77 +49,35 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Button
-        android:id="@+id/Back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
-        android:layout_marginLeft="250dp"
-        android:layout_marginStart="10dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <ImageView
         android:id="@+id/RedFace"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:srcCompat="@mipmap/red_dot"
+        app:srcCompat="@mipmap/red_player"
         android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/Back"
-        android:layout_alignStart="@+id/Back" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <ImageView
         android:id="@+id/BlackFace"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:srcCompat="@mipmap/black_dot"
-        android:layout_marginTop="36dp"
-        android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/RedFace"
-        android:layout_alignStart="@+id/RedFace" />
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/RedFace"
+        android:layout_marginTop="36dp"
+        app:srcCompat="@mipmap/black_player" />
 
-    <EditText
-        android:id="@+id/NameBlack"
+    <TextView
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:layout_alignTop="@+id/BlackFace"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="11dp" />
 
-    <EditText
-        android:id="@+id/passwordblack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/NameBlack"
-        android:layout_marginTop="14dp"
-        android:ems="10"
-        android:inputType="textPassword" />
-
-    <EditText
-        android:id="@+id/NameRed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:id="@+id/passwordred"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:layout_marginTop="280dp"
-        android:layout_marginLeft="0dp" />
+        android:text="Id For Red Player"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_marginTop="65dp"
+        android:layout_below="@+id/RedFace"
+        android:layout_alignLeft="@+id/Saveplayers"
+        android:layout_alignStart="@+id/Saveplayers" />
 
 </RelativeLayout>
