--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SCOREBOARD"
+        android:text="SIGHUP AND SCOREBOARD"
         android:id="@+id/scoreboard"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
@@ -29,7 +29,23 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:srcCompat="@mipmap/logo"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
+    <Button
+        android:id="@+id/Credits"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/scoreboard"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/scoreboard"
+        android:text="Credits" />
 
 
 </RelativeLayout>
